patito_compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> programa_inicio vars_opc funcs_opc INICIO cuerpo FIN
Rule 2     programa_inicio -> PROGRAMA ID PUNTOCOMA
Rule 3     vars_opc -> VARS lista_decl vars_p
Rule 4     vars_opc -> empty
Rule 5     vars_p -> lista_decl vars_p
Rule 6     vars_p -> empty
Rule 7     lista_decl -> decl lista_decl_p
Rule 8     lista_decl_p -> decl lista_decl_p
Rule 9     lista_decl_p -> empty
Rule 10    decl -> ID lista_ids DOSPUNTOS tipo PUNTOCOMA
Rule 11    lista_ids -> COMA ID lista_ids
Rule 12    lista_ids -> empty
Rule 13    tipo -> ENTERO
Rule 14    tipo -> FLOTANTE
Rule 15    funcs_opc -> funcs
Rule 16    funcs_opc -> empty
Rule 17    funcs -> func funcs
Rule 18    funcs -> func
Rule 19    func_inicio -> NULA ID PARENTIZQ
Rule 20    func -> func_inicio params_opc PARENTDER vars_opc cuerpo PUNTOCOMA
Rule 21    params_opc -> tipo ID params_p
Rule 22    params_p -> COMA tipo ID params_p
Rule 23    params_p -> empty
Rule 24    cuerpo -> LLAVEIZQ estatutos LLAVEDER
Rule 25    estatutos -> estatuto estatutos
Rule 26    estatutos -> empty
Rule 27    estatuto -> asigna
Rule 28    estatuto -> condicion
Rule 29    estatuto -> ciclo
Rule 30    estatuto -> llamada
Rule 31    estatuto -> imprime
Rule 32    asigna -> ID ASIGNACION expresion PUNTOCOMA
Rule 33    condicion -> SI PARENTIZQ expresion PARENTDER cuerpo sino_opc PUNTOCOMA
Rule 34    sino_opc -> SINO cuerpo
Rule 35    sino_opc -> empty
Rule 36    ciclo -> MIENTRAS PARENTIZQ expresion PARENTDER HAZ cuerpo PUNTOCOMA
Rule 37    llamada -> ID PARENTIZQ args_opc PARENTDER PUNTOCOMA
Rule 38    args_opc -> expresion args_p
Rule 39    args_opc -> empty
Rule 40    args_p -> COMA expresion args_p
Rule 41    args_p -> empty
Rule 42    imprime -> ESCRIBE PARENTIZQ item_imp items_p PARENTDER PUNTOCOMA
Rule 43    item_imp -> expresion
Rule 44    item_imp -> LETRERO
Rule 45    items_p -> COMA item_imp items_p
Rule 46    items_p -> empty
Rule 47    expresion -> exp MAYORQUE exp
Rule 48    expresion -> exp MENORQUE exp
Rule 49    expresion -> exp DIFERENTE exp
Rule 50    expresion -> exp IGUALIGUAL exp
Rule 51    expresion -> exp
Rule 52    exp -> exp SUMA termino
Rule 53    exp -> exp RESTA termino
Rule 54    exp -> termino
Rule 55    termino -> termino MULTIPLICACION factor
Rule 56    termino -> termino DIVISION factor
Rule 57    termino -> factor
Rule 58    factor -> PARENTIZQ expresion PARENTDER
Rule 59    factor -> signo_opc operando
Rule 60    signo_opc -> SUMA
Rule 61    signo_opc -> RESTA
Rule 62    signo_opc -> empty
Rule 63    operando -> cte
Rule 64    operando -> ID
Rule 65    cte -> CTE_ENT
Rule 66    cte -> CTE_FLOT
Rule 67    empty -> <empty>

Terminals, with rules where they appear

ASIGNACION           : 32
COMA                 : 11 22 40 45
CTE_ENT              : 65
CTE_FLOT             : 66
DIFERENTE            : 49
DIVISION             : 56
DOSPUNTOS            : 10
ENTERO               : 13
ESCRIBE              : 42
FIN                  : 1
FLOTANTE             : 14
HAZ                  : 36
ID                   : 2 10 11 19 21 22 32 37 64
IGUALIGUAL           : 50
INICIO               : 1
LETRERO              : 44
LLAVEDER             : 24
LLAVEIZQ             : 24
MAYORQUE             : 47
MENORQUE             : 48
MIENTRAS             : 36
MULTIPLICACION       : 55
NULA                 : 19
PARENTDER            : 20 33 36 37 42 58
PARENTIZQ            : 19 33 36 37 42 58
PROGRAMA             : 2
PUNTOCOMA            : 2 10 20 32 33 36 37 42
RESTA                : 53 61
SI                   : 33
SINO                 : 34
SUMA                 : 52 60
VARS                 : 3
error                : 

Nonterminals, with rules where they appear

args_opc             : 37
args_p               : 38 40
asigna               : 27
ciclo                : 29
condicion            : 28
cte                  : 63
cuerpo               : 1 20 33 34 36
decl                 : 7 8
empty                : 4 6 9 12 16 23 26 35 39 41 46 62
estatuto             : 25
estatutos            : 24 25
exp                  : 47 47 48 48 49 49 50 50 51 52 53
expresion            : 32 33 36 38 40 43 58
factor               : 55 56 57
func                 : 17 18
func_inicio          : 20
funcs                : 15 17
funcs_opc            : 1
imprime              : 31
item_imp             : 42 45
items_p              : 42 45
lista_decl           : 3 5
lista_decl_p         : 7 8
lista_ids            : 10 11
llamada              : 30
operando             : 59
params_opc           : 20
params_p             : 21 22
programa             : 0
programa_inicio      : 1
signo_opc            : 59
sino_opc             : 33
termino              : 52 53 54 55 56
tipo                 : 10 21 22
vars_opc             : 1 20
vars_p               : 3 5

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . programa_inicio vars_opc funcs_opc INICIO cuerpo FIN
    (2) programa_inicio -> . PROGRAMA ID PUNTOCOMA

    PROGRAMA        shift and go to state 3

    programa                       shift and go to state 1
    programa_inicio                shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> programa_inicio . vars_opc funcs_opc INICIO cuerpo FIN
    (3) vars_opc -> . VARS lista_decl vars_p
    (4) vars_opc -> . empty
    (67) empty -> .

    VARS            shift and go to state 5
    NULA            reduce using rule 67 (empty -> .)
    INICIO          reduce using rule 67 (empty -> .)

    vars_opc                       shift and go to state 4
    empty                          shift and go to state 6

state 3

    (2) programa_inicio -> PROGRAMA . ID PUNTOCOMA

    ID              shift and go to state 7


state 4

    (1) programa -> programa_inicio vars_opc . funcs_opc INICIO cuerpo FIN
    (15) funcs_opc -> . funcs
    (16) funcs_opc -> . empty
    (17) funcs -> . func funcs
    (18) funcs -> . func
    (67) empty -> .
    (20) func -> . func_inicio params_opc PARENTDER vars_opc cuerpo PUNTOCOMA
    (19) func_inicio -> . NULA ID PARENTIZQ

    INICIO          reduce using rule 67 (empty -> .)
    NULA            shift and go to state 13

    funcs_opc                      shift and go to state 8
    funcs                          shift and go to state 9
    empty                          shift and go to state 10
    func                           shift and go to state 11
    func_inicio                    shift and go to state 12

state 5

    (3) vars_opc -> VARS . lista_decl vars_p
    (7) lista_decl -> . decl lista_decl_p
    (10) decl -> . ID lista_ids DOSPUNTOS tipo PUNTOCOMA

    ID              shift and go to state 16

    lista_decl                     shift and go to state 14
    decl                           shift and go to state 15

state 6

    (4) vars_opc -> empty .

    NULA            reduce using rule 4 (vars_opc -> empty .)
    INICIO          reduce using rule 4 (vars_opc -> empty .)
    LLAVEIZQ        reduce using rule 4 (vars_opc -> empty .)


state 7

    (2) programa_inicio -> PROGRAMA ID . PUNTOCOMA

    PUNTOCOMA       shift and go to state 17


state 8

    (1) programa -> programa_inicio vars_opc funcs_opc . INICIO cuerpo FIN

    INICIO          shift and go to state 18


state 9

    (15) funcs_opc -> funcs .

    INICIO          reduce using rule 15 (funcs_opc -> funcs .)


state 10

    (16) funcs_opc -> empty .

    INICIO          reduce using rule 16 (funcs_opc -> empty .)


state 11

    (17) funcs -> func . funcs
    (18) funcs -> func .
    (17) funcs -> . func funcs
    (18) funcs -> . func
    (20) func -> . func_inicio params_opc PARENTDER vars_opc cuerpo PUNTOCOMA
    (19) func_inicio -> . NULA ID PARENTIZQ

    INICIO          reduce using rule 18 (funcs -> func .)
    NULA            shift and go to state 13

    func                           shift and go to state 11
    funcs                          shift and go to state 19
    func_inicio                    shift and go to state 12

state 12

    (20) func -> func_inicio . params_opc PARENTDER vars_opc cuerpo PUNTOCOMA
    (21) params_opc -> . tipo ID params_p
    (13) tipo -> . ENTERO
    (14) tipo -> . FLOTANTE

    ENTERO          shift and go to state 22
    FLOTANTE        shift and go to state 23

    params_opc                     shift and go to state 20
    tipo                           shift and go to state 21

state 13

    (19) func_inicio -> NULA . ID PARENTIZQ

    ID              shift and go to state 24


state 14

    (3) vars_opc -> VARS lista_decl . vars_p
    (5) vars_p -> . lista_decl vars_p
    (6) vars_p -> . empty
    (7) lista_decl -> . decl lista_decl_p
    (67) empty -> .
    (10) decl -> . ID lista_ids DOSPUNTOS tipo PUNTOCOMA

    NULA            reduce using rule 67 (empty -> .)
    INICIO          reduce using rule 67 (empty -> .)
    LLAVEIZQ        reduce using rule 67 (empty -> .)
    ID              shift and go to state 16

    lista_decl                     shift and go to state 25
    vars_p                         shift and go to state 26
    empty                          shift and go to state 27
    decl                           shift and go to state 15

state 15

    (7) lista_decl -> decl . lista_decl_p
    (8) lista_decl_p -> . decl lista_decl_p
    (9) lista_decl_p -> . empty
    (10) decl -> . ID lista_ids DOSPUNTOS tipo PUNTOCOMA
    (67) empty -> .

  ! shift/reduce conflict for ID resolved as shift
    ID              shift and go to state 16
    NULA            reduce using rule 67 (empty -> .)
    INICIO          reduce using rule 67 (empty -> .)
    LLAVEIZQ        reduce using rule 67 (empty -> .)

  ! ID              [ reduce using rule 67 (empty -> .) ]

    decl                           shift and go to state 28
    lista_decl_p                   shift and go to state 29
    empty                          shift and go to state 30

state 16

    (10) decl -> ID . lista_ids DOSPUNTOS tipo PUNTOCOMA
    (11) lista_ids -> . COMA ID lista_ids
    (12) lista_ids -> . empty
    (67) empty -> .

    COMA            shift and go to state 32
    DOSPUNTOS       reduce using rule 67 (empty -> .)

    lista_ids                      shift and go to state 31
    empty                          shift and go to state 33

state 17

    (2) programa_inicio -> PROGRAMA ID PUNTOCOMA .

    VARS            reduce using rule 2 (programa_inicio -> PROGRAMA ID PUNTOCOMA .)
    NULA            reduce using rule 2 (programa_inicio -> PROGRAMA ID PUNTOCOMA .)
    INICIO          reduce using rule 2 (programa_inicio -> PROGRAMA ID PUNTOCOMA .)


state 18

    (1) programa -> programa_inicio vars_opc funcs_opc INICIO . cuerpo FIN
    (24) cuerpo -> . LLAVEIZQ estatutos LLAVEDER

    LLAVEIZQ        shift and go to state 35

    cuerpo                         shift and go to state 34

state 19

    (17) funcs -> func funcs .

    INICIO          reduce using rule 17 (funcs -> func funcs .)


state 20

    (20) func -> func_inicio params_opc . PARENTDER vars_opc cuerpo PUNTOCOMA

    PARENTDER       shift and go to state 36


state 21

    (21) params_opc -> tipo . ID params_p

    ID              shift and go to state 37


state 22

    (13) tipo -> ENTERO .

    ID              reduce using rule 13 (tipo -> ENTERO .)
    PUNTOCOMA       reduce using rule 13 (tipo -> ENTERO .)


state 23

    (14) tipo -> FLOTANTE .

    ID              reduce using rule 14 (tipo -> FLOTANTE .)
    PUNTOCOMA       reduce using rule 14 (tipo -> FLOTANTE .)


state 24

    (19) func_inicio -> NULA ID . PARENTIZQ

    PARENTIZQ       shift and go to state 38


state 25

    (5) vars_p -> lista_decl . vars_p
    (5) vars_p -> . lista_decl vars_p
    (6) vars_p -> . empty
    (7) lista_decl -> . decl lista_decl_p
    (67) empty -> .
    (10) decl -> . ID lista_ids DOSPUNTOS tipo PUNTOCOMA

    NULA            reduce using rule 67 (empty -> .)
    INICIO          reduce using rule 67 (empty -> .)
    LLAVEIZQ        reduce using rule 67 (empty -> .)
    ID              shift and go to state 16

    lista_decl                     shift and go to state 25
    vars_p                         shift and go to state 39
    empty                          shift and go to state 27
    decl                           shift and go to state 15

state 26

    (3) vars_opc -> VARS lista_decl vars_p .

    NULA            reduce using rule 3 (vars_opc -> VARS lista_decl vars_p .)
    INICIO          reduce using rule 3 (vars_opc -> VARS lista_decl vars_p .)
    LLAVEIZQ        reduce using rule 3 (vars_opc -> VARS lista_decl vars_p .)


state 27

    (6) vars_p -> empty .

    NULA            reduce using rule 6 (vars_p -> empty .)
    INICIO          reduce using rule 6 (vars_p -> empty .)
    LLAVEIZQ        reduce using rule 6 (vars_p -> empty .)


state 28

    (8) lista_decl_p -> decl . lista_decl_p
    (8) lista_decl_p -> . decl lista_decl_p
    (9) lista_decl_p -> . empty
    (10) decl -> . ID lista_ids DOSPUNTOS tipo PUNTOCOMA
    (67) empty -> .

  ! shift/reduce conflict for ID resolved as shift
    ID              shift and go to state 16
    NULA            reduce using rule 67 (empty -> .)
    INICIO          reduce using rule 67 (empty -> .)
    LLAVEIZQ        reduce using rule 67 (empty -> .)

  ! ID              [ reduce using rule 67 (empty -> .) ]

    decl                           shift and go to state 28
    lista_decl_p                   shift and go to state 40
    empty                          shift and go to state 30

state 29

    (7) lista_decl -> decl lista_decl_p .

    ID              reduce using rule 7 (lista_decl -> decl lista_decl_p .)
    NULA            reduce using rule 7 (lista_decl -> decl lista_decl_p .)
    INICIO          reduce using rule 7 (lista_decl -> decl lista_decl_p .)
    LLAVEIZQ        reduce using rule 7 (lista_decl -> decl lista_decl_p .)


state 30

    (9) lista_decl_p -> empty .

    ID              reduce using rule 9 (lista_decl_p -> empty .)
    NULA            reduce using rule 9 (lista_decl_p -> empty .)
    INICIO          reduce using rule 9 (lista_decl_p -> empty .)
    LLAVEIZQ        reduce using rule 9 (lista_decl_p -> empty .)


state 31

    (10) decl -> ID lista_ids . DOSPUNTOS tipo PUNTOCOMA

    DOSPUNTOS       shift and go to state 41


state 32

    (11) lista_ids -> COMA . ID lista_ids

    ID              shift and go to state 42


state 33

    (12) lista_ids -> empty .

    DOSPUNTOS       reduce using rule 12 (lista_ids -> empty .)


state 34

    (1) programa -> programa_inicio vars_opc funcs_opc INICIO cuerpo . FIN

    FIN             shift and go to state 43


state 35

    (24) cuerpo -> LLAVEIZQ . estatutos LLAVEDER
    (25) estatutos -> . estatuto estatutos
    (26) estatutos -> . empty
    (27) estatuto -> . asigna
    (28) estatuto -> . condicion
    (29) estatuto -> . ciclo
    (30) estatuto -> . llamada
    (31) estatuto -> . imprime
    (67) empty -> .
    (32) asigna -> . ID ASIGNACION expresion PUNTOCOMA
    (33) condicion -> . SI PARENTIZQ expresion PARENTDER cuerpo sino_opc PUNTOCOMA
    (36) ciclo -> . MIENTRAS PARENTIZQ expresion PARENTDER HAZ cuerpo PUNTOCOMA
    (37) llamada -> . ID PARENTIZQ args_opc PARENTDER PUNTOCOMA
    (42) imprime -> . ESCRIBE PARENTIZQ item_imp items_p PARENTDER PUNTOCOMA

    LLAVEDER        reduce using rule 67 (empty -> .)
    ID              shift and go to state 52
    SI              shift and go to state 53
    MIENTRAS        shift and go to state 54
    ESCRIBE         shift and go to state 55

    estatutos                      shift and go to state 44
    estatuto                       shift and go to state 45
    empty                          shift and go to state 46
    asigna                         shift and go to state 47
    condicion                      shift and go to state 48
    ciclo                          shift and go to state 49
    llamada                        shift and go to state 50
    imprime                        shift and go to state 51

state 36

    (20) func -> func_inicio params_opc PARENTDER . vars_opc cuerpo PUNTOCOMA
    (3) vars_opc -> . VARS lista_decl vars_p
    (4) vars_opc -> . empty
    (67) empty -> .

    VARS            shift and go to state 5
    LLAVEIZQ        reduce using rule 67 (empty -> .)

    vars_opc                       shift and go to state 56
    empty                          shift and go to state 6

state 37

    (21) params_opc -> tipo ID . params_p
    (22) params_p -> . COMA tipo ID params_p
    (23) params_p -> . empty
    (67) empty -> .

    COMA            shift and go to state 58
    PARENTDER       reduce using rule 67 (empty -> .)

    params_p                       shift and go to state 57
    empty                          shift and go to state 59

state 38

    (19) func_inicio -> NULA ID PARENTIZQ .

    ENTERO          reduce using rule 19 (func_inicio -> NULA ID PARENTIZQ .)
    FLOTANTE        reduce using rule 19 (func_inicio -> NULA ID PARENTIZQ .)


state 39

    (5) vars_p -> lista_decl vars_p .

    NULA            reduce using rule 5 (vars_p -> lista_decl vars_p .)
    INICIO          reduce using rule 5 (vars_p -> lista_decl vars_p .)
    LLAVEIZQ        reduce using rule 5 (vars_p -> lista_decl vars_p .)


state 40

    (8) lista_decl_p -> decl lista_decl_p .

    ID              reduce using rule 8 (lista_decl_p -> decl lista_decl_p .)
    NULA            reduce using rule 8 (lista_decl_p -> decl lista_decl_p .)
    INICIO          reduce using rule 8 (lista_decl_p -> decl lista_decl_p .)
    LLAVEIZQ        reduce using rule 8 (lista_decl_p -> decl lista_decl_p .)


state 41

    (10) decl -> ID lista_ids DOSPUNTOS . tipo PUNTOCOMA
    (13) tipo -> . ENTERO
    (14) tipo -> . FLOTANTE

    ENTERO          shift and go to state 22
    FLOTANTE        shift and go to state 23

    tipo                           shift and go to state 60

state 42

    (11) lista_ids -> COMA ID . lista_ids
    (11) lista_ids -> . COMA ID lista_ids
    (12) lista_ids -> . empty
    (67) empty -> .

    COMA            shift and go to state 32
    DOSPUNTOS       reduce using rule 67 (empty -> .)

    lista_ids                      shift and go to state 61
    empty                          shift and go to state 33

state 43

    (1) programa -> programa_inicio vars_opc funcs_opc INICIO cuerpo FIN .

    $end            reduce using rule 1 (programa -> programa_inicio vars_opc funcs_opc INICIO cuerpo FIN .)


state 44

    (24) cuerpo -> LLAVEIZQ estatutos . LLAVEDER

    LLAVEDER        shift and go to state 62


state 45

    (25) estatutos -> estatuto . estatutos
    (25) estatutos -> . estatuto estatutos
    (26) estatutos -> . empty
    (27) estatuto -> . asigna
    (28) estatuto -> . condicion
    (29) estatuto -> . ciclo
    (30) estatuto -> . llamada
    (31) estatuto -> . imprime
    (67) empty -> .
    (32) asigna -> . ID ASIGNACION expresion PUNTOCOMA
    (33) condicion -> . SI PARENTIZQ expresion PARENTDER cuerpo sino_opc PUNTOCOMA
    (36) ciclo -> . MIENTRAS PARENTIZQ expresion PARENTDER HAZ cuerpo PUNTOCOMA
    (37) llamada -> . ID PARENTIZQ args_opc PARENTDER PUNTOCOMA
    (42) imprime -> . ESCRIBE PARENTIZQ item_imp items_p PARENTDER PUNTOCOMA

    LLAVEDER        reduce using rule 67 (empty -> .)
    ID              shift and go to state 52
    SI              shift and go to state 53
    MIENTRAS        shift and go to state 54
    ESCRIBE         shift and go to state 55

    estatuto                       shift and go to state 45
    estatutos                      shift and go to state 63
    empty                          shift and go to state 46
    asigna                         shift and go to state 47
    condicion                      shift and go to state 48
    ciclo                          shift and go to state 49
    llamada                        shift and go to state 50
    imprime                        shift and go to state 51

state 46

    (26) estatutos -> empty .

    LLAVEDER        reduce using rule 26 (estatutos -> empty .)


state 47

    (27) estatuto -> asigna .

    ID              reduce using rule 27 (estatuto -> asigna .)
    SI              reduce using rule 27 (estatuto -> asigna .)
    MIENTRAS        reduce using rule 27 (estatuto -> asigna .)
    ESCRIBE         reduce using rule 27 (estatuto -> asigna .)
    LLAVEDER        reduce using rule 27 (estatuto -> asigna .)


state 48

    (28) estatuto -> condicion .

    ID              reduce using rule 28 (estatuto -> condicion .)
    SI              reduce using rule 28 (estatuto -> condicion .)
    MIENTRAS        reduce using rule 28 (estatuto -> condicion .)
    ESCRIBE         reduce using rule 28 (estatuto -> condicion .)
    LLAVEDER        reduce using rule 28 (estatuto -> condicion .)


state 49

    (29) estatuto -> ciclo .

    ID              reduce using rule 29 (estatuto -> ciclo .)
    SI              reduce using rule 29 (estatuto -> ciclo .)
    MIENTRAS        reduce using rule 29 (estatuto -> ciclo .)
    ESCRIBE         reduce using rule 29 (estatuto -> ciclo .)
    LLAVEDER        reduce using rule 29 (estatuto -> ciclo .)


state 50

    (30) estatuto -> llamada .

    ID              reduce using rule 30 (estatuto -> llamada .)
    SI              reduce using rule 30 (estatuto -> llamada .)
    MIENTRAS        reduce using rule 30 (estatuto -> llamada .)
    ESCRIBE         reduce using rule 30 (estatuto -> llamada .)
    LLAVEDER        reduce using rule 30 (estatuto -> llamada .)


state 51

    (31) estatuto -> imprime .

    ID              reduce using rule 31 (estatuto -> imprime .)
    SI              reduce using rule 31 (estatuto -> imprime .)
    MIENTRAS        reduce using rule 31 (estatuto -> imprime .)
    ESCRIBE         reduce using rule 31 (estatuto -> imprime .)
    LLAVEDER        reduce using rule 31 (estatuto -> imprime .)


state 52

    (32) asigna -> ID . ASIGNACION expresion PUNTOCOMA
    (37) llamada -> ID . PARENTIZQ args_opc PARENTDER PUNTOCOMA

    ASIGNACION      shift and go to state 64
    PARENTIZQ       shift and go to state 65


state 53

    (33) condicion -> SI . PARENTIZQ expresion PARENTDER cuerpo sino_opc PUNTOCOMA

    PARENTIZQ       shift and go to state 66


state 54

    (36) ciclo -> MIENTRAS . PARENTIZQ expresion PARENTDER HAZ cuerpo PUNTOCOMA

    PARENTIZQ       shift and go to state 67


state 55

    (42) imprime -> ESCRIBE . PARENTIZQ item_imp items_p PARENTDER PUNTOCOMA

    PARENTIZQ       shift and go to state 68


state 56

    (20) func -> func_inicio params_opc PARENTDER vars_opc . cuerpo PUNTOCOMA
    (24) cuerpo -> . LLAVEIZQ estatutos LLAVEDER

    LLAVEIZQ        shift and go to state 35

    cuerpo                         shift and go to state 69

state 57

    (21) params_opc -> tipo ID params_p .

    PARENTDER       reduce using rule 21 (params_opc -> tipo ID params_p .)


state 58

    (22) params_p -> COMA . tipo ID params_p
    (13) tipo -> . ENTERO
    (14) tipo -> . FLOTANTE

    ENTERO          shift and go to state 22
    FLOTANTE        shift and go to state 23

    tipo                           shift and go to state 70

state 59

    (23) params_p -> empty .

    PARENTDER       reduce using rule 23 (params_p -> empty .)


state 60

    (10) decl -> ID lista_ids DOSPUNTOS tipo . PUNTOCOMA

    PUNTOCOMA       shift and go to state 71


state 61

    (11) lista_ids -> COMA ID lista_ids .

    DOSPUNTOS       reduce using rule 11 (lista_ids -> COMA ID lista_ids .)


state 62

    (24) cuerpo -> LLAVEIZQ estatutos LLAVEDER .

    FIN             reduce using rule 24 (cuerpo -> LLAVEIZQ estatutos LLAVEDER .)
    PUNTOCOMA       reduce using rule 24 (cuerpo -> LLAVEIZQ estatutos LLAVEDER .)
    SINO            reduce using rule 24 (cuerpo -> LLAVEIZQ estatutos LLAVEDER .)


state 63

    (25) estatutos -> estatuto estatutos .

    LLAVEDER        reduce using rule 25 (estatutos -> estatuto estatutos .)


state 64

    (32) asigna -> ID ASIGNACION . expresion PUNTOCOMA
    (47) expresion -> . exp MAYORQUE exp
    (48) expresion -> . exp MENORQUE exp
    (49) expresion -> . exp DIFERENTE exp
    (50) expresion -> . exp IGUALIGUAL exp
    (51) expresion -> . exp
    (52) exp -> . exp SUMA termino
    (53) exp -> . exp RESTA termino
    (54) exp -> . termino
    (55) termino -> . termino MULTIPLICACION factor
    (56) termino -> . termino DIVISION factor
    (57) termino -> . factor
    (58) factor -> . PARENTIZQ expresion PARENTDER
    (59) factor -> . signo_opc operando
    (60) signo_opc -> . SUMA
    (61) signo_opc -> . RESTA
    (62) signo_opc -> . empty
    (67) empty -> .

    PARENTIZQ       shift and go to state 78
    SUMA            shift and go to state 74
    RESTA           shift and go to state 76
    ID              reduce using rule 67 (empty -> .)
    CTE_ENT         reduce using rule 67 (empty -> .)
    CTE_FLOT        reduce using rule 67 (empty -> .)

    expresion                      shift and go to state 72
    exp                            shift and go to state 73
    termino                        shift and go to state 75
    factor                         shift and go to state 77
    signo_opc                      shift and go to state 79
    empty                          shift and go to state 80

state 65

    (37) llamada -> ID PARENTIZQ . args_opc PARENTDER PUNTOCOMA
    (38) args_opc -> . expresion args_p
    (39) args_opc -> . empty
    (47) expresion -> . exp MAYORQUE exp
    (48) expresion -> . exp MENORQUE exp
    (49) expresion -> . exp DIFERENTE exp
    (50) expresion -> . exp IGUALIGUAL exp
    (51) expresion -> . exp
    (67) empty -> .
    (52) exp -> . exp SUMA termino
    (53) exp -> . exp RESTA termino
    (54) exp -> . termino
    (55) termino -> . termino MULTIPLICACION factor
    (56) termino -> . termino DIVISION factor
    (57) termino -> . factor
    (58) factor -> . PARENTIZQ expresion PARENTDER
    (59) factor -> . signo_opc operando
    (60) signo_opc -> . SUMA
    (61) signo_opc -> . RESTA
    (62) signo_opc -> . empty

    PARENTDER       reduce using rule 67 (empty -> .)
    ID              reduce using rule 67 (empty -> .)
    CTE_ENT         reduce using rule 67 (empty -> .)
    CTE_FLOT        reduce using rule 67 (empty -> .)
    PARENTIZQ       shift and go to state 78
    SUMA            shift and go to state 74
    RESTA           shift and go to state 76

    args_opc                       shift and go to state 81
    expresion                      shift and go to state 82
    empty                          shift and go to state 83
    exp                            shift and go to state 73
    termino                        shift and go to state 75
    factor                         shift and go to state 77
    signo_opc                      shift and go to state 79

state 66

    (33) condicion -> SI PARENTIZQ . expresion PARENTDER cuerpo sino_opc PUNTOCOMA
    (47) expresion -> . exp MAYORQUE exp
    (48) expresion -> . exp MENORQUE exp
    (49) expresion -> . exp DIFERENTE exp
    (50) expresion -> . exp IGUALIGUAL exp
    (51) expresion -> . exp
    (52) exp -> . exp SUMA termino
    (53) exp -> . exp RESTA termino
    (54) exp -> . termino
    (55) termino -> . termino MULTIPLICACION factor
    (56) termino -> . termino DIVISION factor
    (57) termino -> . factor
    (58) factor -> . PARENTIZQ expresion PARENTDER
    (59) factor -> . signo_opc operando
    (60) signo_opc -> . SUMA
    (61) signo_opc -> . RESTA
    (62) signo_opc -> . empty
    (67) empty -> .

    PARENTIZQ       shift and go to state 78
    SUMA            shift and go to state 74
    RESTA           shift and go to state 76
    ID              reduce using rule 67 (empty -> .)
    CTE_ENT         reduce using rule 67 (empty -> .)
    CTE_FLOT        reduce using rule 67 (empty -> .)

    expresion                      shift and go to state 84
    exp                            shift and go to state 73
    termino                        shift and go to state 75
    factor                         shift and go to state 77
    signo_opc                      shift and go to state 79
    empty                          shift and go to state 80

state 67

    (36) ciclo -> MIENTRAS PARENTIZQ . expresion PARENTDER HAZ cuerpo PUNTOCOMA
    (47) expresion -> . exp MAYORQUE exp
    (48) expresion -> . exp MENORQUE exp
    (49) expresion -> . exp DIFERENTE exp
    (50) expresion -> . exp IGUALIGUAL exp
    (51) expresion -> . exp
    (52) exp -> . exp SUMA termino
    (53) exp -> . exp RESTA termino
    (54) exp -> . termino
    (55) termino -> . termino MULTIPLICACION factor
    (56) termino -> . termino DIVISION factor
    (57) termino -> . factor
    (58) factor -> . PARENTIZQ expresion PARENTDER
    (59) factor -> . signo_opc operando
    (60) signo_opc -> . SUMA
    (61) signo_opc -> . RESTA
    (62) signo_opc -> . empty
    (67) empty -> .

    PARENTIZQ       shift and go to state 78
    SUMA            shift and go to state 74
    RESTA           shift and go to state 76
    ID              reduce using rule 67 (empty -> .)
    CTE_ENT         reduce using rule 67 (empty -> .)
    CTE_FLOT        reduce using rule 67 (empty -> .)

    expresion                      shift and go to state 85
    exp                            shift and go to state 73
    termino                        shift and go to state 75
    factor                         shift and go to state 77
    signo_opc                      shift and go to state 79
    empty                          shift and go to state 80

state 68

    (42) imprime -> ESCRIBE PARENTIZQ . item_imp items_p PARENTDER PUNTOCOMA
    (43) item_imp -> . expresion
    (44) item_imp -> . LETRERO
    (47) expresion -> . exp MAYORQUE exp
    (48) expresion -> . exp MENORQUE exp
    (49) expresion -> . exp DIFERENTE exp
    (50) expresion -> . exp IGUALIGUAL exp
    (51) expresion -> . exp
    (52) exp -> . exp SUMA termino
    (53) exp -> . exp RESTA termino
    (54) exp -> . termino
    (55) termino -> . termino MULTIPLICACION factor
    (56) termino -> . termino DIVISION factor
    (57) termino -> . factor
    (58) factor -> . PARENTIZQ expresion PARENTDER
    (59) factor -> . signo_opc operando
    (60) signo_opc -> . SUMA
    (61) signo_opc -> . RESTA
    (62) signo_opc -> . empty
    (67) empty -> .

    LETRERO         shift and go to state 88
    PARENTIZQ       shift and go to state 78
    SUMA            shift and go to state 74
    RESTA           shift and go to state 76
    ID              reduce using rule 67 (empty -> .)
    CTE_ENT         reduce using rule 67 (empty -> .)
    CTE_FLOT        reduce using rule 67 (empty -> .)

    item_imp                       shift and go to state 86
    expresion                      shift and go to state 87
    exp                            shift and go to state 73
    termino                        shift and go to state 75
    factor                         shift and go to state 77
    signo_opc                      shift and go to state 79
    empty                          shift and go to state 80

state 69

    (20) func -> func_inicio params_opc PARENTDER vars_opc cuerpo . PUNTOCOMA

    PUNTOCOMA       shift and go to state 89


state 70

    (22) params_p -> COMA tipo . ID params_p

    ID              shift and go to state 90


state 71

    (10) decl -> ID lista_ids DOSPUNTOS tipo PUNTOCOMA .

    ID              reduce using rule 10 (decl -> ID lista_ids DOSPUNTOS tipo PUNTOCOMA .)
    NULA            reduce using rule 10 (decl -> ID lista_ids DOSPUNTOS tipo PUNTOCOMA .)
    INICIO          reduce using rule 10 (decl -> ID lista_ids DOSPUNTOS tipo PUNTOCOMA .)
    LLAVEIZQ        reduce using rule 10 (decl -> ID lista_ids DOSPUNTOS tipo PUNTOCOMA .)


state 72

    (32) asigna -> ID ASIGNACION expresion . PUNTOCOMA

    PUNTOCOMA       shift and go to state 91


state 73

    (47) expresion -> exp . MAYORQUE exp
    (48) expresion -> exp . MENORQUE exp
    (49) expresion -> exp . DIFERENTE exp
    (50) expresion -> exp . IGUALIGUAL exp
    (51) expresion -> exp .
    (52) exp -> exp . SUMA termino
    (53) exp -> exp . RESTA termino

    MAYORQUE        shift and go to state 92
    MENORQUE        shift and go to state 93
    DIFERENTE       shift and go to state 94
    IGUALIGUAL      shift and go to state 95
    PUNTOCOMA       reduce using rule 51 (expresion -> exp .)
    COMA            reduce using rule 51 (expresion -> exp .)
    PARENTDER       reduce using rule 51 (expresion -> exp .)
    SUMA            shift and go to state 96
    RESTA           shift and go to state 97


state 74

    (60) signo_opc -> SUMA .

    ID              reduce using rule 60 (signo_opc -> SUMA .)
    CTE_ENT         reduce using rule 60 (signo_opc -> SUMA .)
    CTE_FLOT        reduce using rule 60 (signo_opc -> SUMA .)


state 75

    (54) exp -> termino .
    (55) termino -> termino . MULTIPLICACION factor
    (56) termino -> termino . DIVISION factor
